refactor : 하드 코딩 된 부분 수정